[AI Fix] (a11y ADA compliance): set interesting_link color to #1d6dd5 for WCAG contrast

--- a/_sass/minima/_home.scss
+++ b/_sass/minima/_home.scss
@@ -71,6 +71,10 @@
     font-weight: bold;
 }
 
+.interesting_link {
+    color: #1d6dd5;
+}
+
 .home_post_text{
     height: calc(100% - 183px - 10px);
 }
